@@ -41,6 +41,7 @@
 	    
 		cubesviewer.init({
 	        cubesUrl: "{{ cubesviewer_cubes_url }}"
+	        //cubesUrl: "{{ cubesviewer_backend_url }}/cubes"
 	    });
 		
 		cubesviewer.gui.init({
